--- a/daily/20210203_TIL.md
+++ b/daily/20210203_TIL.md
@@ -1,13 +1,88 @@
-TIL
+:date: **​2021-02-03** 
 
-2021-02-03
+:bookmark_tabs: **JQuery & console.log**
 
-02/03 수
--json형식[{},{},{} ...]
--json data -> table 생성
--json구조를 이해하고 필요한 데이터를 뽑아내 활용할 수 있는 훈련을 해야한다. 
--javascript 버전별로 코드가 다름.(es5:for문/es6:함수형(const,let,var)데이터를 다루기 쉽게 업데이트되었음. 맵,리듀스,필터 등)
--테이블 만들어보기★ 
--for문 if문만 잘써도..(2중 for문)★
+---
+
+1. 조언
+
+   -json형식[{},{},{} ...]
+   -json data -> table 생성
+   -json구조를 이해하고 필요한 데이터를 뽑아내 활용할 수 있는 훈련을 해야한다. 
+   -javascript 버전별로 코드가 다름.(es5:for문/es6:함수형(const,let,var)데이터를 다루기 쉽게 업데이트되었음. 맵,리듀스,필터 등)
+   -테이블 만들어보기★ 
+   -for문 if문만 잘써도..(2중 for문)★
 
 ![](C:\Users\ADMIN\IdeaProjects\TIL21\daily\img\0203IMG.png)
+
+
+
+#### 2. jQuery 활용한 input 동시 입력
+
+1. jquery 설정
+
+   ```html
+   <!DOCTYPE html>
+   <html lang="en" xmlns:th="http://www.thymeleaf.org">
+       
+   //1. jquery 가져오기
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
+   ```
+
+   
+
+2. input 동시 입력
+
+   ```html
+   <!--test start [input 동시입력]-->
+       <input type="text" name="beforeAmt" id="beforeAmt" value="" class="money" size="61" align="left" onkeyup="eventKeyup(this.value)"/>
+       <input type="text" name="afterAmt" id="afterAmt" value="" class="money" size="61" align="left" />
+   <!--test end-->
+   ```
+
+3. console.log
+
+   * test
+
+     ```html
+     <script>
+               var a = 1;
+               var b = 'hello';
+               console.log(a);
+               console.log(b);
+     </script>
+     ```
+
+   * input창에 입력하는 값 console에 찍히기
+
+     ```html
+     <script type="text/javaScript">
+             function eventKeyup(str){
+               $("#afterAmt").val(str);    // jQuery 이용
+               console.log(str);      	//추가  
+             }
+     </script>
+     ```
+
+     * 실행화면
+
+       ![](C:\Users\ADMIN\IdeaProjects\TIL21\daily\img\0203_keyup_console_log.png)
+
+   * change 이벤트를 사용한 console.log 출력
+
+     ```html
+     <script type="text/javascript">
+             $("#beforeAmt").on('change', function(e){
+               console.log($(this).val());
+             })
+     </script>
+     ```
+
+     * 실행화면
+
+       ![](C:\Users\ADMIN\IdeaProjects\TIL21\daily\img\0203_change_console_log.png)
+
+       :point_right:`beforeAmt` input창에 text를 입력하고 `afterAmt` input창에 마우스를 클릭하는 순간 Console에 바뀐 숫자가 찍힌다.
+
+
+
