--- a/daily/20210208_TIL.md
+++ b/daily/20210208_TIL.md
@@ -8,6 +8,14 @@
 
 
 
+**debugging**
+
+https://jojoldu.tistory.com/149
+
+
+
+
+
 **OHSI (Operating System & Hardware Information)**
 
 * OS와 HW정보를 제공하는 JNA 기반 Java 라이브러리
