--- a/daily/20210305.md
+++ b/daily/20210305.md
@@ -6,7 +6,7 @@
 
 
 
-![img]()
+![img](https://github.com/lebcoco/TIL21/blob/main/daily/img/0305.png)
 
 [문제 1] 09:00 - 10:00wifi / 유선랜 연결 안됨
 [실행 1] centos 무선랜 설정하기
